--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
                         <a href="https://parvez539.github.io/Monster-Finder/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
+
+                <!-- the forth project -->
+                <div class="work">
+                    <img src="work4.jpg" alt="">
+                    <div class="layer">
+                        <h3>Nature</h3>
+                        <p>This is a nature travels project. I design it use HTML, CSS,SASS and JavaScript.</p>
+                        <a href="https://parvez539.github.io/Natures/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
             </div>
             <a href="#" class="btn">See more</a>
         </div>
