Added new feature

--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
                     </div>
                 </div>
 
+                <!-- project 2 bank home page -->
+                <div class="work">
+                    <img src="work5.jpg" alt="">
+                    <div class="layer">
+                        <h3>Bank App</h3>
+                        <p>This is a Bank App. Made it use HTML, CSS and JavaScript </p>
+                        <a href="https://parvez539.github.io/BankApp/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
                 <div class="work">
                     <img src="work-2.jpg" alt="">
                     <div class="layer">
